# Montfra-Game-Engine-XLR

./: CMakeLists.txt  README.md
resources/: icon.ppm
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/gui/: AnimationManager.cpp  AnimationManager.h  GuiAnimation.cpp  GuiAnimation.h  GuiButton.cpp  GuiButton.h  GuiCheckbox.cpp  GuiCheckbox.h  GuiDraw.cpp  GuiDraw.h  GuiElement.cpp  GuiElement.h  GuiImage.cpp  GuiImage.h  GuiInput.cpp  GuiInput.h  GuiInputText.cpp  GuiInputText.h  GuiManager.cpp  GuiManager.h  GuiMenuBar.cpp  GuiMenuBar.h  GuiPanel.cpp  GuiPanel.h  GuiProgressBar.cpp  GuiProgressBar.h  GuiSlider.cpp  GuiSlider.h  GuiText.cpp  GuiText.h
src/text/: Text.cpp  Text.h
